--- a/public/html/article.html
+++ b/public/html/article.html
@@ -1,37 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/style.css">
-  <title>Atyrau bugin</title>
-</head>
-<body>
-  <header>
-    <h1>Atyrau Bugin</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <div id="content">
-    <article>
+{{define "article"}}
+<article>
+    <a href="/news_detail">
       <h2>Article Title</h2>
       <img src="article-image.jpg" alt="Article Image">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</p>
-    </article>
+      </article>
+    </a>
     <article>
+    <a href="/news_detail">
       <h2>Article Title</h2>
       <img src="article-image.jpg" alt="Article Image">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</p>
+    </a>
     </article>
-  </div>
-  <footer>
-    <p>Copyright © 2023 News Website</p>
-  </footer>
-</body>
-</html>
+{{end}}
