--- a/public/html/header.html
+++ b/public/html/header.html
@@ -1,22 +1,12 @@
-{{define "header.html"}}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/style.css">
-  <title>Atyrau bugin</title>
-</head>
-<body>
-  <header>
-    <h1>Atyrau Bugin</h1>
-    <nav>
+{{define "header"}}
+<header>
+  <a class="logo" href="/"><h1>Atyrau Bugin</h1></a>
+  <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/news">News</a></li>
+          <li><a href="/contact">Contacts</a></li>
       </ul>
-    </nav>
-  </header>
+  </nav>
+</header>
 {{end}}
