--- a/public/html/article.html
+++ b/public/html/article.html
@@ -2,14 +2,15 @@
 <article>
     <a href="/news_detail">
       <h2>Article Title</h2>
-      <img src="article-image.jpg" alt="Article Image">
+      <img style="max-width: 600px;" src="../logo/article-image.jpeg" alt="Article Image">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</p>
       </article>
+      PUuUUSSSY nIGGAaaa!! slAAatT
     </a>
     <article>
     <a href="/news_detail">
       <h2>Article Title</h2>
-      <img src="article-image.jpg" alt="Article Image">
+      <img style="max-width: 600px" src="../logo/article-image.jpeg" alt="Article Image">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</p>
     </a>
     </article>
